tests/baselines/reference/augmentExportEquals1_1.errors.txt
tests/cases/compiler/file2.ts(6,16): error TS2671: Cannot augment module 'file1' because it resolves to a non-module entity.
tests/cases/compiler/file3.ts(3,8): error TS2503: Cannot find namespace 'x'.


==== tests/cases/compiler/file3.ts (1 errors) ====
    import x = require("file1");
    import "file2";
    let a: x.A; // should not work
           ~
!!! error TS2503: Cannot find namespace 'x'.
==== tests/cases/compiler/file1.d.ts (0 errors) ====
    declare module "file1" {
        var x: number;
        export = x;
    }
    
==== tests/cases/compiler/file2.ts (1 errors) ====
    /// <reference path="file1.d.ts"/>
    import x = require("file1"); 
    
    // augmentation for 'file1'
    // should error since 'file1' does not have namespace meaning
    declare module "file1" {
                   ~~~~~~~
!!! error TS2671: Cannot augment module 'file1' because it resolves to a non-module entity.
        interface A { a }
    }
    